z-index fix

--- a/app/components/FirstScreen/index.module.scss
+++ b/app/components/FirstScreen/index.module.scss
@@ -1,5 +1,6 @@
 .firstScreen {
   position: relative;
+  z-index: 2;
   background: #000;
   background: linear-gradient(252.81deg, #202020 0%, #000 86%);
   color: #fff;
